add unit test and DRY up constants